# kakapo

./: .gitconfig  .gitignore  10peers.sh  20peers.sh  40peers.sh  5peers.sh  Makefile  README.flamegraphs  README.kakakpo_json  README.kakapo_json  README.md  Stuff.hs  analysis  bgps.c  bufferedread.c  build.sh  bytestring-unittest.c  bytestring.c  bytestring.h  client.c  cmnds.libvirt-nss  cuckoo.sh  demo.c  dualmode-usage.txt  kakapo.c  kakapo.h  libupdate.c  libupdate.h  libutil.c  libutil.h  logbuffer-test.c  logbuffer.c  logbuffer.h  main.c  make  nlri-unittest.c  nlri.c  nlri.h  parsearg.c  parsearg.h  (+33 more)
Ingest/: Analysis.hs  GPlot.hs  QFields.hs  Summarise.hs
Tools/: Sections.hs  SysinfoGet.hs
containerstat/: cpuset.go  cpustat.go  cstat.go  docker.go  formatraw.go  formatraw_test.go  go.mod  parseprocstat.go
core/: README.md  build.sh  bytestring.c  bytestring.h  install.sh  kakapo.h  libutil.c  libutil.h  logbuffer-test.c  logbuffer.c  logbuffer.h  main.c  mode-parameters.txt  nlri.c  nlri.h  parameters.txt  parsearg.c  pathattributes.c  pathattributes.h  session.c  sockbuf.c  stats.c  stats.h  summary-mode-parameters.txt  summary-parameters.txt  tcpflags.c  tcpflags.h  timedloop.c  timedloop.h  txwait.c  unit.c  update.c  update.h  util.c  util.h
cpustat/: .gitignore  cpuset_test.go  cpustat.go  docker.go  docker_test.go  formatraw.go  go.mod  parseprocstat.go  parseprocstat_test.go
ingest/: AddMeta.hs  Analysis.hs  C2.hs  CompareText.hs  Constraints.hs  GPlot.hs  GenParse.hs  GenParser.hs  Graph.hs  KParse.hs  KakapoData.hs  Mean.hs  Paths.hs  Sections.hs  Stages.hs  Summarise.hs  Summary.hs  Z.hs  batch.sh  gnuplot.txt  ingest.cabal  stack.yaml
kagu/: README.md  arproute-pkg.sh  build.sh  docker-considerations.txt  docker-enable-insecure-registry.tar  docker-run-scripts.txt  enable-remote.sh  get_pkgs.sh  image_build.sh  install_docker.sh  lts-list.txt  make  pkg-install  registry.sh  repo-build.sh
kagu/arprouter/: Dockerfile
kagu/base/: Dockerfile
kagu/bgpd/: Dockerfile  ibgpebgp.conf
kagu/bird/: bird.conf.active  bird.conf.passive
kagu/bird1/: Dockerfile  build.sh
kagu/bird2/: Dockerfile  build.sh
kagu/bird2.legacy/: Dockerfile  bird.conf
kagu/bird3/: Dockerfile  build.sh
kagu/docker.legacy/bgpd/: Dockerfile  bgpd.conf  build.sh
kagu/docker.legacy/bird/: Dockerfile  bird.conf  build.sh  run.sh
kagu/docker.legacy/frr/: Dockerfile  (+4 more)
kagu/frr/: Dockerfile  bgpd.conf  deb_pkgs.frr  frr_versions.txt
kagu/frr.legacy/: Dockerfile
kagu/ghcup/: Dockerfile
kagu/gobgp/: Dockerfile
kagu/hbgp/: Dockerfile  run.sh
kagu/hbgpdev/: Dockerfile  bgp.conf  bgp.conf.active  run.sh
kagu/kakapo/: Dockerfile  authorized_keys  cdump.c  run.sh
kagu/mdserver/: Dockerfile  run.sh
kagu/relay/: Dockerfile  run.sh  run.sh.active  run.sh.passive
kagu/stack/: Dockerfile  Simple.hs  simple.cabal  stack.yaml
relay/: Makefile  build.sh  install.sh  librelay.c  librelay.h  libsink.c  main.c  noiovec.c  parse-test.c  parse.c  relay2.c  relayapp.c  relayapp.txt  sinkapp.c  usage.txt  util.c  util.h
report/: README.fix_json_data  dt.py  ff.sh  graph.py  install_mongodb.sh  linestyle.py  logtext.py  process.py  report strategy.txt  report.py  setup.sh  simple.py  summaries.py  summary.py
runner/: Docker.hs  Presets.hs  Runner.hs  SSHRunner.hs  runner.cabal
sysinfo/: stack.yaml  sysinfo.cabal
test/: hex.c  hostaddress.c  sconcat.c  word.c
testing/: 10peers.sh  20peers.sh  30peers.sh  40peers.sh  5peers.sh  Frr.hs  Peers.hs  bgpd.conf.50  bird.conf.50  bird2.conf.50  frr.conf.50  loop.sh  netns.sh  peers.01  peers.05  peers.10  peers.15  peers.20  peers.25  peers.30  peers.35  peers.40  peers.45  peers.50  useful-experiments.txt  var.sh  vars
testing/filters/: bird.conf  bird2.conf  frr.conf
testing/simple/: bgp.conf  bird.conf  bird2.conf  frr.conf  gobgpd.conf
testing/smoketest/: add_loopbacks.sh  bgpd.conf  frr.conf  run.sh  run_bgpd.sh  run_frr.sh  runx.sh
testplans/: .gitignore  INSTALL.txt  README.md  addpath.script  bestex.script  bootstrap.sh  build_bird.sh  classfull.script  control1.conf  controller.script  docker.service  exa.script  exatest.sh  null.script  rc-local.service  rc.local  restart1.sh  restart3.sh  script-addpath.sh  script1.sh  script2.sh  script3.sh  start-ap-junos3.sh  start-be-junos3.sh  vios_test.sh
testplans/hbgp_functional_test/: README  hbgp.conf  run.sh  run.vm.sh
testplans/kakapo_bird_hbgp_test/: bird.conf  hbgp.conf  run.sh
testplans/nets/: hostnetworks.txt  install.sh  nets  nets.json  vm  vms.json
testplans/obselete/: br1.startup.cfg  br3a.startup.cfg  br3b.startup.cfg  br3c.startup.cfg  junos-base.cfg
testplans/scripts/: README.2024.md  README.md  agent1.conf  agent2.conf  agent3.conf  allsorts.script  base.script  bgpagent.script  bgpd.run  bgpd.target  bgpping.script  bgprelay-kakapo.script  bird2.run  bird2.target  common.sh  control2.conf  controller.test  erl.run  erl.target  exabgp-kakapo.script  exabgp.sh  exabgp.target  frr-ris.conf  frr.conf  frr.run  frr.target  gobgp.run  gobgp.target  hbgp-kakapo.conf  hbgp.target  ios-be-3.script  junos-be-3.script  junos.target  kakapo-bgprelay.sh  kakapo-silent.script  kakapo-test.sh  kakapo.sh  kakapo.test  layouts.sh  local.sh  (+12 more)
tools/: Docker.hs  DockerTest.hs  INSTALL-SYSINFO.txt  LogFileNames.hs  Presets.hs  Run-kakapo-big.hs  Run-kakapo-bird.hs  Run-kakapo.hs  Runner-test.hs  Runner.hs  RunnerBase.hs  Sections-test.hs  Sections.hs  Summarise.hs  Sysinfo.hs  sysinfo.service
tools/ingest/: Analysis.hs  GPlot.hs  LogFileNames.hs  Mean.hs  QFields.hs  Sections.hs  Stages.hs  Summarise.hs
vmrouters/: bgp_bad_route_detection.txt  bgp_reachability_implementation.txt  breaktest.go  cases.sh  priv.sh  thesis_functional_testing.txt  thesis_vmrouters.txt  ubuntu-dependencies.sh  vmcheck.sh
vmrouters/cisco/: buildvios.sh  vios.ex
vmrouters/common/: build-nets.sh  default1.xml  default2.xml  default3.xml  default4.xml
vmrouters/juniper/: buildjunos.sh  junos.ex
vmrouters/sshkeys/: README  junos.rsa  junos.rsa.pub  set_sshers.sh  vm.key  vm.pub
(+42 files in other folders)
