cabal-version:       2.4

name:                ingest
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              nic hart
maintainer:          nic@hdb3.net
copyright:           Nicholas Hart
category:            Network

common base
  other-extensions:    OverloadedStrings
  default-language:    Haskell2010
  build-depends:       base , text , containers , gnuplot , hashable , directory , extra , filepath , unix, attoparsec

executable ingest
  import:              base
  main-is:             Analysis.hs
  other-modules:       GPlot Mean QFields Sections Stages Paths
  other-extensions:    OverloadedStrings, TupleSections, RecordWildCards, DeriveGeneric
  
executable kparse
  import:              base
  main-is:             KParse.hs
  other-modules:       KakapoData

executable genparse
  import:              base
  main-is:             GenParser.hs
  other-modules:       GenParse, Paths, Summary

executable summarise
  import:              base
  main-is:             Summarise.hs
  other-modules:       Constraints, Graph, Mean, GenParse, Paths, Summary, CompareText

executable z
  import:              base
  main-is:             Z.hs
  other-modules:       Graph, Mean, Constraints, GenParse, Paths, Summary, CompareText,AddMeta
  build-depends:       process

