cabal-version:       2.4
name:                runner
version:             0.1.0.0
homepage:            https://github.com/hdb3/kakapo
license:             Apache-2.0
license-file:        LICENSE
author:              nic hart
maintainer:          nic@hdb3.net
copyright:           Nicholas Hart
category:            Testing
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     RunnerBase, Docker, LogFileNames, Presets
  build-depends:       base ^>=4.12.0.0, process ^>=1.6.5.0, time ^>=1.8.0.2, directory, bytestring, filepath, uuid
  default-language:    Haskell2010

executable runner
  main-is:             Runner.hs
  other-modules:       Docker, LogFileNames, Presets, RunnerBase
  build-depends:       base ^>=4.12.0.0, process ^>=1.6.5.0, time ^>=1.8.0.2, directory, bytestring, filepath, uuid
  default-language:    Haskell2010
