cabal-version:       2.4
name:                runner
version:             0.1.0.0
homepage:            https://github.com/hdb3/kakapo
license:             Apache-2.0
license-file:        LICENSE
author:              nic hart
maintainer:          nic@hdb3.net
copyright:           Nicholas Hart
category:            Testing

executable runner
  main-is:             Runner.hs
  other-modules:       Docker, LogFileNames, Presets, RunnerBase
  build-depends:       base , process , time , directory, bytestring, filepath, uuid
  default-language:    Haskell2010
