cabal-version:       2.4
name:                sysinfo
version:             0.1.0.0
license:             Apache-2.0
author:              nic hart
maintainer:          nic@hdb3.net
copyright:           Nicholas Hart
category:            System

executable sysinfo
  main-is:             Sysinfo.hs
  build-depends:       base ^>=4.12.0.0, process ^>=1.6.5.0, unix ^>=2.7.2.2
  default-language:    Haskell2010
